--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -26,6 +26,9 @@ parameters:
   type: string
 - name: deploymentSecondaryLocation
   type: string
+- name: policyCertThumbprint
+  type: string
+  default: 'EC634E6E424711C4060CA3821C3A4F457BC6D244'
 - name: eapimEnvironmentName
   type: string
   values:
@@ -41,6 +44,7 @@ jobs:
   pool:
     vmImage: windows-latest
   variables:
+    dsiB2cCertThumbprint: ${{parameters.policyCertThumbprint}}
     overrideParameters: '
       -applicationName "$(applicationName)"
       -environmentName "${{parameters.environmentName}}"
@@ -98,6 +102,7 @@ jobs:
         - pwsh: |
             Write-Host "##vso[task.setvariable variable=dsiB2cCertThumbprint]XXXXXX"
             Write-Host "##vso[task.setvariable variable=dsiB2cFunctionKey]$($env:ARMOUTPUT_FUNCTIONDEFAULTKEY)"
+          env:
           displayName: Set Named values
 
         - task: Tokenization@2
