--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -144,6 +144,7 @@ jobs:
             functionKey: $(armOutput.functionMasterKey)
             functionUrl: $(armOutput.functionUrl)
             productName: 'NCS Identity'
+            productRequiresSubscription: false
             publishContactEmail: 'paul.sheridan@digital.education.gov.uk'
             publishApiName: 'NCS Identity'
             publishApiOpenApiSchemaPath: '$(Build.SourcesDirectory)\definition.json'
