--- a/src/B2CAzureFunc/local.settings.json
+++ b/src/B2CAzureFunc/local.settings.json
@@ -10,7 +10,7 @@
     "B2CSignUpPolicy": "B2C_1A_signup_invitation",
     "B2CSignupConirmPolicy": "B2C_1A_signup_confirmation",
     "B2CPasswordResetConirmPolicy": "B2C_1A_passwordResetConformation",
-    "B2CClientId": "488c321f-10e4-48f2-b9c2-261e2add2f8d",
+    "RelyingPartyAppClientId": "488c321f-10e4-48f2-b9c2-261e2add2f8d",
     "B2CRedirectUri": "https://jwt.ms",
     "B2CAuthorizationUrl": "https://{0}.b2clogin.com/{0}.onmicrosoft.com/{1}/oauth2/v2.0/authorize?client_id={2}&nonce={4}&redirect_uri={3}&scope=openid&response_type=id_token",
     "ClientSigningKey": "4/Mx7i5ba9uK0byx9tAgZgUkNh2+hW18+GMPmdzEWuY=",
