fix: passed param cleanup

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -78,11 +78,23 @@ stages:
     parameters:
       applicationName: $(applicationName)
       environmentName: 'test'
+      functionServicePlanSkuName: $(functionServicePlanSkuName)
+      functionServicePlanSkuTier: $(functionServicePlanSkuTier)
+      functionServicePlanSkuCount: $(functionServicePlanSkuCount)
+      b2cSignUpPolicy: $(b2cSignUpPolicy)
+      b2cSignupConfirmPolicy: $(b2cSignupConfirmPolicy)
+      b2cPasswordResetConfirmPoicy: $(b2cPasswordResetConfirmPoicy)
+      b2cChangeEmailPolicy: $(b2cChangeEmailPolicy)
+      b2cAuthorizationUrl: $(b2cAuthorizationUrl)
+      ncsApimSubscriptionKey: $(ncsApimSubscriptionKey)
+      ncsDssApiKey: $(ncsDssApiKey)
+      ncsDssSearchApiUrl: $(ncsDssSearchApiUrl)
+      ncsDssSearchApiVersion: $(ncsDssSearchApiVersion)
       environmentId: 't01'
       serviceConnection: $(testServiceConnection)
       eapimServiceConnection: $(eapimServiceConnection)
       subscriptionId: $(testSubscriptionId)
-      clientId: $(testRelyAppClientId)
+      relyingPartyAppClientId: $(testRelyAppClientId)
       clientSigningKey: $(testClientSigningKey)
       graphAccessClientId: $(testGraphAccessClientId)
       graphAccessClientSecret: $(testGraphAccessClientSecret)
