--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -141,8 +141,8 @@ jobs:
       -SMTPPassword "$(smtpPassword)"
       -SMTPFromAddress "$(smtpFromAddress)"
       -SMTPSubject "Sign-in to NCS"
-      -SignupEmailSubject "Complete your SFA registration"
-      -SignupConfirmationEmailSubject " Complete your SFA registration"
+      -SignupEmailSubject "Complete your National Careers Service registration"
+      -SignupConfirmationEmailSubject "Complete your National Careers Service registration"
       -PasswordResetConfirmationEmailSubject " Reset your password"
       -AccountActivationEmailExpiryInSeconds "3600"
       -NCSApimSubscriptionKey "${{parameters.ncsApimSubscriptionKey}}"
