--- a/src/B2CAzureFunc.Tests/B2CAzureFunc.Tests.csproj
+++ b/src/B2CAzureFunc.Tests/B2CAzureFunc.Tests.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\B2CAzureFunc\B2CAzureFunc.csproj" />
+    <ProjectReference Include="..\Providers.Email\Providers.Email.csproj" />
   </ItemGroup>
 
 </Project>
