--- a/src/B2CAzureFunc/local.settings.json
+++ b/src/B2CAzureFunc/local.settings.json
@@ -42,8 +42,14 @@
     "EmailChangeConfirmationEmailSubjectOldEmail": "Email change request",
     "B2CChangeEmailPolicy": "B2C_1A_changeemail",
     "ExtensionAppId": "9509a3af9e674a7d9443a094c02c8e69",
+    "FromDisplayName": "The National Careers Service",
 
     //new
-    "FromDisplayName": "The National Careers Service"
+    "NotifyAPIKey": "emailintegration-f0833c0b-c57b-48c2-b455-62cf80226d42-89b7c7f6-8e59-4df6-ab62-27e7661e5a10",
+    "NotifyAidedSignupEmailTemplateId": "3a128969-3d8f-4000-8fc9-2cdb6805691f",
+    "NotifySelfSignupEmailTemplateId": "3a128969-3d8f-4000-8fc9-2cdb6805691f",
+    "NotifyPasswordResetConfirmationEmailTemplateId": "8dffe252-f532-49fc-9415-ebf332f33f00",
+    "NotifyEmailChangeConfirmationEmailNewEmailTemplateId": "223634a9-58cd-4d56-9385-d7448993e11a",
+    "NotifyEmailChangeConfirmationEmailOldEmailTemplateId": "a7147406-cf75-4100-a711-5aeea98e4ad9"
   }
 }
