--- a/src/Providers.Email/Providers.Email.csproj
+++ b/src/Providers.Email/Providers.Email.csproj
@@ -13,4 +13,8 @@
     <None Include="..\..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Notify" Version="2.8.0" />
+  </ItemGroup>
+
 </Project>
