--- a/yaml/jobs/deploy.yml
+++ b/yaml/jobs/deploy.yml
@@ -148,11 +148,11 @@ jobs:
       -AccountActivationEmailExpiryInSeconds "3600"
       -NCSApimSubscriptionKey "${{parameters.ncsApimSubscriptionKey}}"
       -NCSDSSApiKey "${{parameters.ncsDssApiKey}}"
-      -NCSDSSSearchApiUrl "${{parameters.ncsDssSearchApiUrl}}"
       -NCSDSSSearchApiVersion "${{parameters.ncsDssSearchApiVersion}}"
-      -NCSDSSCreateCustomerApiUrl "${{parameters.ncsDssCreateCustomerApiUrl}}"
-      -NCSDSSCreateContactApiUrl "${{parameters.ncsDssCreateContactApiUrl}}"
-      -NCSDSSCreateIdentityApiUrl "${{parameters.ncsDssCreateIdentityApiUrl}}"
+      -NCSDSSSearchApiUrl "${{parameters.ncsDssApiRoot}}${{parameters.ncsDssSearchApiUrlRoute}}"
+      -NCSDSSCreateCustomerApiUrl "${{parameters.ncsDssApiRoot}}${{parameters.ncsDssCreateCustomerApiUrlRoute}}"
+      -NCSDSSCreateContactApiUrl "${{parameters.ncsDssApiRoot}}${{parameters.ncsDssCreateContactApiUrlRoute}}"
+      -NCSDSSCreateIdentityApiUrl "${{parameters.ncsDssApiRoot}}${{parameters.ncsDssCreateIdentityApiUrlRoute}}"
       -TouchpointId "${{parameters.touchpointId}}"
       -B2CGraphAccessClientId "${{parameters.graphAccessClientId}}"
       -B2CGraphAccessClientSecret "${{parameters.graphAccessClientSecret}}"
