--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -33,8 +33,8 @@ stages:
     parameters:
       applicationName: $(applicationName)
       webPublish: false
-      nugetConfigPath: /nuget.config
-      
+      nugetConfigPath: nuget.config
+
 - stage: testTenantSetup
   displayName: Tenant Setup - TEST
   dependsOn:
