--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -89,9 +89,9 @@ stages:
       b2cPasswordResetConfirmPoicy: $(b2cPasswordResetConfirmPoicy)
       b2cChangeEmailPolicy: $(b2cChangeEmailPolicy)
       b2cAuthorizationUrl: $(b2cAuthorizationUrl)
-      ncsApimSubscriptionKey: $(ncsApimSubscriptionKey)
+      ncsApimSubscriptionKey: $(ncsDevDssApiKey)
       ncsDssApiRoot: $(devNcsDssApiRoot)
-      ncsDssApiKey: $(ncsDssApiKey)
+      ncsDssApiKey: $(ncsDevDssApiKey)
       ncsDssSearchApiVersion: $(ncsDssSearchApiVersion)
       ncsDssSearchApiUrlRoute: $(ncsDssSearchApiUrlRoute)
       ncsDssCreateCustomerApiUrlRoute: $(ncsDssCreateCustomerApiUrlRoute)
@@ -135,9 +135,9 @@ stages:
       b2cPasswordResetConfirmPoicy: $(b2cPasswordResetConfirmPoicy)
       b2cChangeEmailPolicy: $(b2cChangeEmailPolicy)
       b2cAuthorizationUrl: $(b2cAuthorizationUrl)
-      ncsApimSubscriptionKey: $(ncsApimSubscriptionKey)
+      ncsApimSubscriptionKey: $(ncsTestDssApiKey)
       ncsDssApiRoot: $(testNcsDssApiRoot)
-      ncsDssApiKey: $(ncsDssApiKey)
+      ncsDssApiKey: $(ncsTestDssApiKey)
       ncsDssSearchApiVersion: $(ncsDssSearchApiVersion)
       ncsDssSearchApiUrlRoute: $(ncsDssSearchApiUrlRoute)
       ncsDssCreateCustomerApiUrlRoute: $(ncsDssCreateCustomerApiUrlRoute)
