change: notify test values

--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -89,7 +89,7 @@ stages:
       b2cPasswordResetConfirmPoicy: $(b2cPasswordResetConfirmPoicy)
       b2cChangeEmailPolicy: $(b2cChangeEmailPolicy)
       b2cAuthorizationUrl: $(b2cAuthorizationUrl)
-      ncsApimSubscriptionKey: $(ncsDevDssApiKey)
+      ncsApimSubscriptionKey: $(ncsApimSubscriptionKey)
       ncsDssApiRoot: $(devNcsDssApiRoot)
       ncsDssApiKey: $(ncsDevDssApiKey)
       ncsDssSearchApiVersion: $(ncsDssSearchApiVersion)
@@ -155,10 +155,10 @@ stages:
       deploymentSecondaryLocation: $(deploymentSecondaryLocation)
       eapimEnvironmentName: 'Test'
       extensionAppId: $(parsedTestExtensionAppId)
-      notifyAPIKey: $(devNotifyAPIKey)
-      notifyAidedSignupEmailTemplateId: $(devNotifyAidedSignupEmailTemplateId)
-      notifySelfSignupEmailTemplateId: $(devNotifySelfSignupEmailTemplateId)
-      notifyPasswordResetConfirmationEmailTemplateId: $(devNotifyPasswordResetConfirmationEmailTemplateId)
-      notifyEmailChangeConfirmationEmailNewEmailTemplateId: $(devNotifyEmailChangeConfirmationEmailNewEmailTemplateId)
-      notifyEmailChangeConfirmationEmailOldEmailTemplateId: $(devNotifyEmailChangeConfirmationEmailOldEmailTemplateId)
+      notifyAPIKey: $(testNotifyAPIKey)
+      notifyAidedSignupEmailTemplateId: $(testNotifyAidedSignupEmailTemplateId)
+      notifySelfSignupEmailTemplateId: $(testNotifySelfSignupEmailTemplateId)
+      notifyPasswordResetConfirmationEmailTemplateId: $(testNotifyPasswordResetConfirmationEmailTemplateId)
+      notifyEmailChangeConfirmationEmailNewEmailTemplateId: $(testNotifyEmailChangeConfirmationEmailNewEmailTemplateId)
+      notifyEmailChangeConfirmationEmailOldEmailTemplateId: $(testNotifyEmailChangeConfirmationEmailOldEmailTemplateId)
 
